@@ -1,3 +1,8 @@
+2005-11-21  Francois Dumont  <dums@stlport...>
+
+	* Fix classic locale facet initial reference counter thanks
+	Cabal
+
 2005-11-20  Petr Ovtchenkov  <complement@users.sourceforge.net>
 
 	* src/num_put.h: check that incoming string has enough
